updated team_roster to generate roster_stats.htm with numbers converted to int and with win/loss stats

--- a/team_roster.ipynb
+++ b/team_roster.ipynb
@@ -703,74 +703,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "LeBron James       2\n",
-       "Dwyane Wade        3\n",
-       "James Jones        2\n",
-       "Udonis Haslem      3\n",
-       "Shannon Brown      3\n",
-       "                  ..\n",
-       "Corey Brewer       1\n",
-       "Jamaal Magloire    0\n",
-       "Sam Cassell        1\n",
-       "Kevin Love         0\n",
-       "DeAndre Liggins    0\n",
-       "Name: Won, Length: 244, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 33
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sort df by how many finals player has appeared in\n",
-    "roster_stats = roster_stats.sort_values(by='Finals', ascending=False)\n",
-    "roster_stats['Won'].astype(int)"
+    "roster_stats = roster_stats.sort_values(by='Finals', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                 Finals  Won  Lost\n",
-       "LeBron James          6  2.0   4.0\n",
-       "Dwyane Wade           5  3.0   2.0\n",
-       "James Jones           5  2.0   3.0\n",
-       "Udonis Haslem         5  3.0   2.0\n",
-       "Shannon Brown         4  3.0   1.0\n",
-       "...                 ...  ...   ...\n",
-       "Corey Brewer          1  1.0   0.0\n",
-       "Jamaal Magloire       1  0.0   1.0\n",
-       "Sam Cassell           1  1.0   0.0\n",
-       "Kevin Love            1  0.0   1.0\n",
-       "DeAndre Liggins       1  0.0   1.0\n",
+       "                      Finals  Won  Lost\n",
+       "LeBron James               6    2     4\n",
+       "Udonis Haslem              5    3     2\n",
+       "Dwyane Wade                5    3     2\n",
+       "James Jones                5    2     3\n",
+       "Didier Ilunga-Mbenga       4    2     2\n",
+       "...                      ...  ...   ...\n",
+       "Eddy Curry                 1    1     0\n",
+       "Corey Brewer               1    1     0\n",
+       "Jamaal Magloire            1    0     1\n",
+       "Sam Cassell                1    1     0\n",
+       "DeAndre Liggins            1    0     1\n",
        "\n",
        "[244 rows x 3 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Finals</th>\n      <th>Won</th>\n      <th>Lost</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>LeBron James</th>\n      <td>6</td>\n      <td>2.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>Dwyane Wade</th>\n      <td>5</td>\n      <td>3.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>James Jones</th>\n      <td>5</td>\n      <td>2.0</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>Udonis Haslem</th>\n      <td>5</td>\n      <td>3.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>Shannon Brown</th>\n      <td>4</td>\n      <td>3.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>Corey Brewer</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>Jamaal Magloire</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>Sam Cassell</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>Kevin Love</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>DeAndre Liggins</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>244 rows × 3 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Finals</th>\n      <th>Won</th>\n      <th>Lost</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>LeBron James</th>\n      <td>6</td>\n      <td>2</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>Udonis Haslem</th>\n      <td>5</td>\n      <td>3</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>Dwyane Wade</th>\n      <td>5</td>\n      <td>3</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>James Jones</th>\n      <td>5</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>Didier Ilunga-Mbenga</th>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>Eddy Curry</th>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>Corey Brewer</th>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>Jamaal Magloire</th>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>Sam Cassell</th>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>DeAndre Liggins</th>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>244 rows × 3 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 37
     }
    ],
    "source": [
+    "# converting the won and lost columns to int from floats\n",
+    "# used solution from here:  https://stackoverflow.com/questions/48511484/data-type-conversion-error-valueerror-cannot-convert-non-finite-values-na-or\n",
+    "roster_stats['Won'] = roster_stats['Won'].astype(int)\n",
+    "roster_stats['Lost'] = roster_stats['Lost'].astype(int)\n",
     "roster_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
